update health check schema and router
